--- a/media-queries.html
+++ b/media-queries.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/media-queries.css">
     <meta charset="UTF-8">
     <title>Media Queries</title>
 </head>
@@ -9,15 +10,17 @@
     <div class="alert-info hidden-on-desktop">
         <a href="#main">Skip to main content</a>
     </div>
+    <div id="heading">
     <h1>Company</h1>
-    <nav>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="header-img">
         <img src="https://via.placeholder.com/900x400?" alt="">
     </div>
